integrasi sewa  status sedang_disewa & filter mobil sudah_disewa

--- a/views/mobil_view.xml
+++ b/views/mobil_view.xml
@@ -12,8 +12,8 @@
                 <field name="tipe"/>
                 <field name="transmisi"/>
                 <field name="harga"/>   
-                <field name="brand"/>    
-                       
+                <field name="brand"/> 
+                <field name="sedang_disewa"/>          
             </tree>
         </field>
     </record>
